:sparkles: Add Logo restructure
Add Logo to README, document in changelog. Restructure files.

--- a/index.org
+++ b/index.org
@@ -1,13 +1,6 @@
 #+TITLE: Yojimbo Security
 #+INCLUDE: "header.org"
-[[./static/logo3.png]]
 #+AUTHOR: David Johnson
-#+SETUPFILE: org-html-themes/org/theme-readtheorg-local.setup
+#+SETUPFILE: org-html-themes/org/theme-readtheorg-local-0.setup
 
-#+HTML_HEAD: <style> #content{max-width: 1800px;}</style>
-#+HTML_HEAD: <style> p{max-width: 800px;}</style>
-#+HTML_HEAD: <style> li{max-width: 800px;}</style
-
-* Wireless
-
-[[file:/aircrackWEPclassic.html][Aircrack WEP Classic]]
+#+INCLUDE: "theindex.inc"
